--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,4 +128,12 @@ footer {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
+
+/* Large devices (laptops and desktop, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
+    
 }
