--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ main {
 
 /* Meetup Times section */
 #times {
-    background: url('../images/dublin-city.webp') no-repeat top center / cover;
+    background: url('../images/dublin-city.webp') no-repeat center / cover;
     /* Handles responsivity without the need for a media query */
     display: flex;
     flex-wrap: wrap;
@@ -175,16 +175,16 @@ main {
     background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
-    /* This will not wrap on screens of less then wide.
+    /* This will not wrap on screens of less than 400px wide.
     Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
-    /* Create a grid of meetup time divs over the background image */
+    /* Creates a grid of meetup time divs over the background image */
     border: 2px solid white;
 }
 
 #times h3 {
-    /* override the heading colour set in general styles */
+    /* Override the heading colour set in general styles */
     color: #fafafa;
 }
 
